edit some visuality and fixed statistics on mobile

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -10,7 +10,7 @@
     z-index: 10;
 }
 
-@media(max-width: 720px) {
+@media(max-width: 960px) {
     .button__frame {
         padding: 15px;
         border-radius: 15px;
