--- a/src/components/card-right/CardRight.css
+++ b/src/components/card-right/CardRight.css
@@ -37,7 +37,7 @@
 
 @media(max-width: 380px) {
     #right {
-        width: 230px;
+        width: 100%;
         height: 230px;
     }
 }
