--- a/src/components/statistics/StatsButton.css
+++ b/src/components/statistics/StatsButton.css
@@ -16,6 +16,20 @@
 }
 
 .statistics__frame {
+    transition: all 0.5s ease;
+}
+
+.statistics__frame.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.statistics__frame.close {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.statistics__frame {
     display: flex;
     padding: 20px 30px;
     flex-direction: column;
@@ -47,11 +61,7 @@
     gap: 30px;
 }
 
-@media(max-width: 720px) {
-    .statistics {
-        gap: 10px;
-    }
-
+@media(max-width: 960px) {
     .stats__button__frame {
         padding: 15px;
         border-radius: 15px;
@@ -59,5 +69,12 @@
 
     .svg {
         width: 18px;
+    }
+}
+
+@media(max-width: 720px) {
+    .statistics {
+        display: none;
+        gap: 10px;
     }
 }
